borsh-derive/src/internals/deserialize/structs/snapshots/borsh_init_func-2.snap
---
source: borsh-derive/src/internals/deserialize/structs/mod.rs
expression: pretty_print_syn_str(actual).unwrap()
---
impl borsh::de::BorshDeserializeAsync for A {
    async fn deserialize_reader<__R: borsh::async_io::AsyncRead>(
        reader: &mut __R,
    ) -> ::core::result::Result<Self, borsh::io::Error> {
        let mut return_value = Self {
            x: <u64 as borsh::BorshDeserializeAsync>::deserialize_reader(reader).await?,
            y: <String as borsh::BorshDeserializeAsync>::deserialize_reader(reader)
                .await?,
        };
        return_value.initialization_method();
        ::core::result::Result::Ok(return_value)
    }
}
