borsh-derive/src/internals/deserialize/structs/snapshots/check_deserialize_with_async_attr-2.snap
---
source: borsh-derive/src/internals/deserialize/structs/mod.rs
expression: pretty_print_syn_str(actual).unwrap()
---
impl<K: Ord, V> borsh::de::BorshDeserializeAsync for A<K, V>
where
    K: borsh::de::BorshDeserializeAsync,
    V: borsh::de::BorshDeserializeAsync,
{
    async fn deserialize_reader<__R: borsh::async_io::AsyncRead>(
        reader: &mut __R,
    ) -> ::core::result::Result<Self, borsh::io::Error> {
        ::core::result::Result::Ok(Self {
            x: third_party_impl::deserialize_third_party(reader).await?,
            y: <u64 as borsh::BorshDeserializeAsync>::deserialize_reader(reader).await?,
        })
    }
}
