borsh-derive/src/internals/deserialize/structs/snapshots/generic_named_fields_struct_borsh_skip.snap
---
source: borsh-derive/src/internals/deserialize/structs/mod.rs
expression: pretty_print_syn_str(&actual).unwrap()
---
#[automatically_derived]
impl<K, V, U> borsh::de::BorshDeserialize for G<K, V, U>
where
    U: borsh::de::BorshDeserialize,
    K: core::default::Default,
    V: core::default::Default,
{
    fn deserialize_reader<__R: borsh::io::Read>(
        reader: &mut __R,
    ) -> ::core::result::Result<Self, borsh::io::Error> {
        Ok(Self {
            x: core::default::Default::default(),
            y: borsh::BorshDeserialize::deserialize_reader(reader)?,
        })
    }
}
