borsh-derive/src/internals/deserialize/structs/snapshots/recursive_struct-2.snap
---
source: borsh-derive/src/internals/deserialize/structs/mod.rs
expression: pretty_print_syn_str(actual).unwrap()
---
impl borsh::de::BorshDeserializeAsync for CRecC {
    async fn deserialize_reader<__R: borsh::async_io::AsyncRead>(
        reader: &mut __R,
    ) -> ::core::result::Result<Self, borsh::io::Error> {
        ::core::result::Result::Ok(Self {
            a: <String as borsh::BorshDeserializeAsync>::deserialize_reader(reader)
                .await?,
            b: <HashMap<
                String,
                CRecC,
            > as borsh::BorshDeserializeAsync>::deserialize_reader(reader)
                .await?,
        })
    }
}
