borsh-derive/src/internals/deserialize/structs/snapshots/recursive_struct.snap
---
source: borsh-derive/src/internals/deserialize/structs/mod.rs
expression: pretty_print_syn_str(&actual).unwrap()
---
impl borsh::de::BorshDeserialize for CRecC {
    fn deserialize_reader<__R: borsh::io::Read>(
        reader: &mut __R,
    ) -> ::core::result::Result<Self, borsh::io::Error> {
        Ok(Self {
            a: borsh::BorshDeserialize::deserialize_reader(reader)?,
            b: borsh::BorshDeserialize::deserialize_reader(reader)?,
        })
    }
}
